tests/templates/onpremises/02-full-cilium-haproxy/baseline/manifests/ingress/policies/forecastle/forecastle.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forecastle-ingress-haproxy
  namespace: forecastle
  labels:
    cluster.kfd.sighup.io/module: ingress
spec:
  podSelector:
    matchLabels:
      app: forecastle
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-haproxy
        podSelector:
          matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            app.kubernetes.io/instance: haproxy-ingress
      ports:
        - port: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forecastle-egress-kube-apiserver
  namespace: forecastle
  labels:
    cluster.kfd.sighup.io/module: ingress
spec:
  podSelector:
    matchLabels:
      app: forecastle
  policyTypes:
    - Egress
  egress:
  - ports:
    - port: 6443
      protocol: TCP
